docs/Praktische Projekte/helm auftrag/ingress-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: gb-fronting
    #spec:
    #  defaultBackend:
    #    service:
    #      name: frontend
    #      port:
    #        number: 30233
spec:
  rules:
  - host: test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 30233
status:
  loadBalancer: {}
